--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "mariadb": "^3.1.1",
     "morgan": "~1.9.1",
     "sequelize": "^6.31.0",
+    "swagger-autogen": "^2.23.4",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "vary": "^1.1.2"
   },
   "devDependencies": {
